# arduino-esp32

./: .gitignore  .gitmodules  CMakeLists.txt
cores/esp32/: esp32-hal-cpu.c  esp32-hal-cpu.h  esp32-hal-gpio.h  esp32-hal.h
tools/sdk/esp32/include/driver/include/driver/: gpio.h
tools/sdk/esp32/include/soc/soc/esp32/include/soc/: soc_caps.h
tools/sdk/esp32/include/soc/soc/include/soc/: gpio_periph.h  rtc_io_periph.h
tools/sdk/esp32s2/include/hal/include/hal/: gpio_types.h
tools/sdk/esp32s2/include/soc/soc/esp32s2/include/soc/: soc_caps.h
