set(CORE_SRCS
  cores/esp32/base64.cpp
  cores/esp32/cbuf.cpp
  cores/esp32/esp32-hal-adc.c
  cores/esp32/esp32-hal-bt.c
  cores/esp32/esp32-hal-cpu.c
  cores/esp32/esp32-hal-dac.c
  cores/esp32/esp32-hal-gpio.c
  cores/esp32/esp32-hal-i2c.c
  cores/esp32/esp32-hal-ledc.c
  cores/esp32/esp32-hal-matrix.c
  cores/esp32/esp32-hal-misc.c
  cores/esp32/esp32-hal-psram.c
  cores/esp32/esp32-hal-sigmadelta.c
  cores/esp32/esp32-hal-spi.c
  cores/esp32/esp32-hal-time.c
  cores/esp32/esp32-hal-timer.c
  cores/esp32/esp32-hal-tinyusb.c
  cores/esp32/esp32-hal-touch.c
  cores/esp32/esp32-hal-uart.c
  cores/esp32/esp32-hal-rmt.c
  cores/esp32/Esp.cpp
  cores/esp32/FunctionalInterrupt.cpp
  cores/esp32/HardwareSerial.cpp
  cores/esp32/IPAddress.cpp
  cores/esp32/IPv6Address.cpp
  cores/esp32/libb64/cdecode.c
  cores/esp32/libb64/cencode.c
  cores/esp32/main.cpp
  cores/esp32/MD5Builder.cpp
  cores/esp32/Print.cpp
  cores/esp32/stdlib_noniso.c
  cores/esp32/Stream.cpp
  cores/esp32/StreamString.cpp
  cores/esp32/USB.cpp
  cores/esp32/USBCDC.cpp
  cores/esp32/wiring_pulse.c
  cores/esp32/wiring_shift.c
  cores/esp32/WMath.cpp
  cores/esp32/WString.cpp
  )

set(LIBRARY_SRCS
  libraries/ArduinoOTA/src/ArduinoOTA.cpp
  libraries/AsyncUDP/src/AsyncUDP.cpp
  libraries/BluetoothSerial/src/BluetoothSerial.cpp
  libraries/DNSServer/src/DNSServer.cpp
  libraries/EEPROM/src/EEPROM.cpp
  libraries/ESPmDNS/src/ESPmDNS.cpp
  libraries/FFat/src/FFat.cpp
  libraries/FS/src/FS.cpp
  libraries/FS/src/vfs_api.cpp
  libraries/HTTPClient/src/HTTPClient.cpp
  libraries/HTTPUpdate/src/HTTPUpdate.cpp
  libraries/LITTLEFS/src/LITTLEFS.cpp
  libraries/NetBIOS/src/NetBIOS.cpp
  libraries/Preferences/src/Preferences.cpp
  libraries/SD_MMC/src/SD_MMC.cpp
  libraries/SD/src/SD.cpp
  libraries/SD/src/sd_diskio.cpp
  libraries/SD/src/sd_diskio_crc.c
  libraries/SimpleBLE/src/SimpleBLE.cpp
  libraries/SPIFFS/src/SPIFFS.cpp
  libraries/SPI/src/SPI.cpp
  libraries/Ticker/src/Ticker.cpp
  libraries/Update/src/Updater.cpp
  libraries/Update/src/HttpsOTAUpdate.cpp
  libraries/WebServer/src/WebServer.cpp
  libraries/WebServer/src/Parsing.cpp
  libraries/WebServer/src/detail/mimetable.cpp
  libraries/WiFiClientSecure/src/ssl_client.cpp
  libraries/WiFiClientSecure/src/WiFiClientSecure.cpp
  libraries/WiFi/src/ETH.cpp
  libraries/WiFi/src/WiFiAP.cpp
  libraries/WiFi/src/WiFiClient.cpp
  libraries/WiFi/src/WiFi.cpp
  libraries/WiFi/src/WiFiGeneric.cpp
  libraries/WiFi/src/WiFiMulti.cpp
  libraries/WiFi/src/WiFiProv.cpp
  libraries/WiFi/src/WiFiScan.cpp
  libraries/WiFi/src/WiFiServer.cpp
  libraries/WiFi/src/WiFiSTA.cpp
  libraries/WiFi/src/WiFiUdp.cpp
  libraries/Wire/src/Wire.cpp
  libraries/NimBLE-Arduino/src/NimBLECharacteristic.cpp
  libraries/NimBLE-Arduino/src/FreeRTOS.cpp
  libraries/NimBLE-Arduino/src/NimBLE2904.cpp
  libraries/NimBLE-Arduino/src/NimBLESecurity.cpp
  libraries/NimBLE-Arduino/src/NimBLEBeacon.cpp
  libraries/NimBLE-Arduino/src/esp-hci/src/esp_nimble_hci.c
  libraries/NimBLE-Arduino/src/NimBLEHIDDevice.cpp
  libraries/NimBLE-Arduino/src/NimBLEAdvertisedDevice.cpp
  libraries/NimBLE-Arduino/src/NimBLERemoteService.cpp
  libraries/NimBLE-Arduino/src/NimBLEDevice.cpp
  libraries/NimBLE-Arduino/src/porting/npl/freertos/src/npl_os_freertos.c
  libraries/NimBLE-Arduino/src/porting/npl/freertos/src/nimble_port_freertos.c
  libraries/NimBLE-Arduino/src/porting/nimble/src/hal_timer.c
  libraries/NimBLE-Arduino/src/porting/nimble/src/os_msys_init.c
  libraries/NimBLE-Arduino/src/porting/nimble/src/nimble_port.c
  libraries/NimBLE-Arduino/src/porting/nimble/src/endian.c
  libraries/NimBLE-Arduino/src/porting/nimble/src/os_mempool.c
  libraries/NimBLE-Arduino/src/porting/nimble/src/mem.c
  libraries/NimBLE-Arduino/src/porting/nimble/src/os_mbuf.c
  libraries/NimBLE-Arduino/src/porting/nimble/src/os_cputime_pwr2.c
  libraries/NimBLE-Arduino/src/porting/nimble/src/os_cputime.c
  libraries/NimBLE-Arduino/src/NimBLERemoteCharacteristic.cpp
  libraries/NimBLE-Arduino/src/NimBLEAdvertising.cpp
  libraries/NimBLE-Arduino/src/NimBLEServer.cpp
  libraries/NimBLE-Arduino/src/NimBLEUtils.cpp
  libraries/NimBLE-Arduino/src/NimBLEAddress.cpp
  libraries/NimBLE-Arduino/src/NimBLEEddystoneURL.cpp
  libraries/NimBLE-Arduino/src/ext/tinycrypt/src/sha256.c
  libraries/NimBLE-Arduino/src/ext/tinycrypt/src/ecc_platform_specific.c
  libraries/NimBLE-Arduino/src/ext/tinycrypt/src/ecc_dh.c
  libraries/NimBLE-Arduino/src/ext/tinycrypt/src/ccm_mode.c
  libraries/NimBLE-Arduino/src/ext/tinycrypt/src/utils.c
  libraries/NimBLE-Arduino/src/ext/tinycrypt/src/ecc_dsa.c
  libraries/NimBLE-Arduino/src/ext/tinycrypt/src/aes_decrypt.c
  libraries/NimBLE-Arduino/src/ext/tinycrypt/src/hmac.c
  libraries/NimBLE-Arduino/src/ext/tinycrypt/src/cbc_mode.c
  libraries/NimBLE-Arduino/src/ext/tinycrypt/src/aes_encrypt.c
  libraries/NimBLE-Arduino/src/ext/tinycrypt/src/cmac_mode.c
  libraries/NimBLE-Arduino/src/ext/tinycrypt/src/ecc.c
  libraries/NimBLE-Arduino/src/ext/tinycrypt/src/ctr_prng.c
  libraries/NimBLE-Arduino/src/ext/tinycrypt/src/ctr_mode.c
  libraries/NimBLE-Arduino/src/ext/tinycrypt/src/hmac_prng.c
  libraries/NimBLE-Arduino/src/nimble/host/services/ias/src/ble_svc_ias.c
  libraries/NimBLE-Arduino/src/nimble/host/services/gap/src/ble_svc_gap.c
  libraries/NimBLE-Arduino/src/nimble/host/services/bas/src/ble_svc_bas.c
  libraries/NimBLE-Arduino/src/nimble/host/services/gatt/src/ble_svc_gatt.c
  libraries/NimBLE-Arduino/src/nimble/host/services/ipss/src/ble_svc_ipss.c
  libraries/NimBLE-Arduino/src/nimble/host/services/ans/src/ble_svc_ans.c
  libraries/NimBLE-Arduino/src/nimble/host/services/tps/src/ble_svc_tps.c
  libraries/NimBLE-Arduino/src/nimble/host/services/lls/src/ble_svc_lls.c
  libraries/NimBLE-Arduino/src/nimble/host/util/src/addr.c
  libraries/NimBLE-Arduino/src/nimble/host/mesh/src/net.c
  libraries/NimBLE-Arduino/src/nimble/host/mesh/src/beacon.c
  libraries/NimBLE-Arduino/src/nimble/host/mesh/src/proxy.c
  libraries/NimBLE-Arduino/src/nimble/host/mesh/src/prov.c
  libraries/NimBLE-Arduino/src/nimble/host/mesh/src/lpn.c
  libraries/NimBLE-Arduino/src/nimble/host/mesh/src/testing.c
  libraries/NimBLE-Arduino/src/nimble/host/mesh/src/health_srv.c
  libraries/NimBLE-Arduino/src/nimble/host/mesh/src/health_cli.c
  libraries/NimBLE-Arduino/src/nimble/host/mesh/src/cfg_cli.c
  libraries/NimBLE-Arduino/src/nimble/host/mesh/src/model_srv.c
  libraries/NimBLE-Arduino/src/nimble/host/mesh/src/glue.c
  libraries/NimBLE-Arduino/src/nimble/host/mesh/src/cfg_srv.c
  libraries/NimBLE-Arduino/src/nimble/host/mesh/src/crypto.c
  libraries/NimBLE-Arduino/src/nimble/host/mesh/src/mesh.c
  libraries/NimBLE-Arduino/src/nimble/host/mesh/src/access.c
  libraries/NimBLE-Arduino/src/nimble/host/mesh/src/adv.c
  libraries/NimBLE-Arduino/src/nimble/host/mesh/src/transport.c
  libraries/NimBLE-Arduino/src/nimble/host/mesh/src/light_model.c
  libraries/NimBLE-Arduino/src/nimble/host/mesh/src/friend.c
  libraries/NimBLE-Arduino/src/nimble/host/mesh/src/model_cli.c
  libraries/NimBLE-Arduino/src/nimble/host/mesh/src/settings.c
  libraries/NimBLE-Arduino/src/nimble/host/mesh/src/shell.c
  libraries/NimBLE-Arduino/src/nimble/host/store/ram/src/ble_store_ram.c
  libraries/NimBLE-Arduino/src/nimble/host/store/config/src/ble_store_nvs.c
  libraries/NimBLE-Arduino/src/nimble/host/store/config/src/ble_store_config.c
  libraries/NimBLE-Arduino/src/nimble/host/src/ble_gap.c
  libraries/NimBLE-Arduino/src/nimble/host/src/ble_store_util.c
  libraries/NimBLE-Arduino/src/nimble/host/src/ble_hs_misc.c
  libraries/NimBLE-Arduino/src/nimble/host/src/ble_hs_hci_evt.c
  libraries/NimBLE-Arduino/src/nimble/host/src/ble_gatts.c
  libraries/NimBLE-Arduino/src/nimble/host/src/ble_uuid.c
  libraries/NimBLE-Arduino/src/nimble/host/src/ble_hs_flow.c
  libraries/NimBLE-Arduino/src/nimble/host/src/ble_att_svr.c
  libraries/NimBLE-Arduino/src/nimble/host/src/ble_hs_hci_util.c
  libraries/NimBLE-Arduino/src/nimble/host/src/ble_hs_id.c
  libraries/NimBLE-Arduino/src/nimble/host/src/ble_monitor.c
  libraries/NimBLE-Arduino/src/nimble/host/src/ble_l2cap_sig_cmd.c
  libraries/NimBLE-Arduino/src/nimble/host/src/ble_att.c
  libraries/NimBLE-Arduino/src/nimble/host/src/ble_sm.c
  libraries/NimBLE-Arduino/src/nimble/host/src/ble_hs_periodic_sync.c
  libraries/NimBLE-Arduino/src/nimble/host/src/ble_sm_lgcy.c
  libraries/NimBLE-Arduino/src/nimble/host/src/ble_gatts_lcl.c
  libraries/NimBLE-Arduino/src/nimble/host/src/ble_sm_cmd.c
  libraries/NimBLE-Arduino/src/nimble/host/src/ble_hs_mbuf.c
  libraries/NimBLE-Arduino/src/nimble/host/src/ble_ibeacon.c
  libraries/NimBLE-Arduino/src/nimble/host/src/ble_hs.c
  libraries/NimBLE-Arduino/src/nimble/host/src/ble_hs_atomic.c
  libraries/NimBLE-Arduino/src/nimble/host/src/ble_hs_startup.c
  libraries/NimBLE-Arduino/src/nimble/host/src/ble_l2cap.c
  libraries/NimBLE-Arduino/src/nimble/host/src/ble_hs_resolv.c
  libraries/NimBLE-Arduino/src/nimble/host/src/ble_hs_pvcy.c
  libraries/NimBLE-Arduino/src/nimble/host/src/ble_att_clt.c
  libraries/NimBLE-Arduino/src/nimble/host/src/ble_eddystone.c
  libraries/NimBLE-Arduino/src/nimble/host/src/ble_hs_stop.c
  libraries/NimBLE-Arduino/src/nimble/host/src/ble_sm_alg.c
  libraries/NimBLE-Arduino/src/nimble/host/src/ble_hs_hci.c
  libraries/NimBLE-Arduino/src/nimble/host/src/ble_sm_sc.c
  libraries/NimBLE-Arduino/src/nimble/host/src/ble_hs_shutdown.c
  libraries/NimBLE-Arduino/src/nimble/host/src/ble_hs_adv.c
  libraries/NimBLE-Arduino/src/nimble/host/src/ble_gattc.c
  libraries/NimBLE-Arduino/src/nimble/host/src/ble_l2cap_sig.c
  libraries/NimBLE-Arduino/src/nimble/host/src/ble_hs_log.c
  libraries/NimBLE-Arduino/src/nimble/host/src/ble_l2cap_coc.c
  libraries/NimBLE-Arduino/src/nimble/host/src/ble_att_cmd.c
  libraries/NimBLE-Arduino/src/nimble/host/src/ble_store.c
  libraries/NimBLE-Arduino/src/nimble/host/src/ble_hs_dbg.c
  libraries/NimBLE-Arduino/src/nimble/host/src/ble_hs_cfg.c
  libraries/NimBLE-Arduino/src/nimble/host/src/ble_hs_conn.c
  libraries/NimBLE-Arduino/src/nimble/host/src/ble_hs_mqueue.c
  libraries/NimBLE-Arduino/src/nimble/host/src/ble_hs_hci_cmd.c
  libraries/NimBLE-Arduino/src/NimBLEScan.cpp
  libraries/NimBLE-Arduino/src/NimBLERemoteDescriptor.cpp
  libraries/NimBLE-Arduino/src/port/src/esp_nimble_mem.c
  libraries/NimBLE-Arduino/src/NimBLEClient.cpp
  libraries/NimBLE-Arduino/src/NimBLEEddystoneTLM.cpp
  libraries/NimBLE-Arduino/src/NimBLEUUID.cpp
  libraries/NimBLE-Arduino/src/NimBLEDescriptor.cpp
  libraries/NimBLE-Arduino/src/NimBLEService.cpp
  )

set(BLE_SRCS
  libraries/BLE/src/BLE2902.cpp
  libraries/BLE/src/BLE2904.cpp
  libraries/BLE/src/BLEAddress.cpp
  libraries/BLE/src/BLEAdvertisedDevice.cpp
  libraries/BLE/src/BLEAdvertising.cpp
  libraries/BLE/src/BLEBeacon.cpp
  libraries/BLE/src/BLECharacteristic.cpp
  libraries/BLE/src/BLECharacteristicMap.cpp
  libraries/BLE/src/BLEClient.cpp
  libraries/BLE/src/BLEDescriptor.cpp
  libraries/BLE/src/BLEDescriptorMap.cpp
  libraries/BLE/src/BLEDevice.cpp
  libraries/BLE/src/BLEEddystoneTLM.cpp
  libraries/BLE/src/BLEEddystoneURL.cpp
  libraries/BLE/src/BLEExceptions.cpp
  libraries/BLE/src/BLEHIDDevice.cpp
  libraries/BLE/src/BLERemoteCharacteristic.cpp
  libraries/BLE/src/BLERemoteDescriptor.cpp
  libraries/BLE/src/BLERemoteService.cpp
  libraries/BLE/src/BLEScan.cpp
  libraries/BLE/src/BLESecurity.cpp
  libraries/BLE/src/BLEServer.cpp
  libraries/BLE/src/BLEService.cpp
  libraries/BLE/src/BLEServiceMap.cpp
  libraries/BLE/src/BLEUtils.cpp
  libraries/BLE/src/BLEUUID.cpp
  libraries/BLE/src/BLEValue.cpp
  libraries/BLE/src/FreeRTOS.cpp
  libraries/BLE/src/GeneralUtils.cpp
  )


set(includedirs
  variants/esp32/
  cores/esp32/
  libraries/ArduinoOTA/src
  libraries/AsyncUDP/src
  libraries/BLE/src
  libraries/BluetoothSerial/src
  libraries/DNSServer/src
  libraries/EEPROM/src
  libraries/ESP32/src
  libraries/ESPmDNS/src
  libraries/FFat/src
  libraries/FS/src
  libraries/HTTPClient/src
  libraries/HTTPUpdate/src
  libraries/LITTLEFS/src
  libraries/NetBIOS/src
  libraries/Preferences/src
  libraries/SD_MMC/src
  libraries/SD/src
  libraries/SimpleBLE/src
  libraries/SPIFFS/src
  libraries/SPI/src
  libraries/Ticker/src
  libraries/Update/src
  libraries/WebServer/src
  libraries/WiFiClientSecure/src
  libraries/WiFi/src
  libraries/Wire/src
  libraries/NimBLE-Arduino/src
  tools/sdk/esp32/include/bt/include
  )

set(srcs ${CORE_SRCS} ${LIBRARY_SRCS} ${BLE_SRCS})
set(priv_includes cores/esp32/libb64)
set(requires spi_flash mbedtls mdns esp_adc_cal)
set(priv_requires fatfs nvs_flash app_update spiffs bootloader_support openssl bt tinyusb main)

idf_component_register(INCLUDE_DIRS ${includedirs} PRIV_INCLUDE_DIRS ${priv_includes} SRCS ${srcs} REQUIRES ${requires} PRIV_REQUIRES ${priv_requires})

if(IDF_TARGET STREQUAL "esp32")
target_compile_options(${COMPONENT_TARGET} PUBLIC -DARDUINO=10812 -DARDUINO_ESP32_DEV -DARDUINO_ARCH_ESP32 -DARDUINO_BOARD="ESP32_DEV" -DARDUINO_VARIANT="esp32" -DESP32)
endif()
if(IDF_TARGET STREQUAL "esp32s2")
target_compile_options(${COMPONENT_TARGET} PUBLIC -DARDUINO=10812 -DARDUINO_ESP32S2_DEV -DARDUINO_ARCH_ESP32 -DARDUINO_BOARD="ESP32S2_DEV" -DARDUINO_VARIANT="esp32s2" -DESP32)
endif()
